# devlib

./: .gitignore  CMakeLists.txt  Makefile  README.md  SUMMARY_SSL.md  UNIFIED_HTTP_HTTPS.md  build.sh  setup_proxy.sh
cmake/: DevlibRootfs.cmake
config/: packages.cmake
example/: CMakeLists.txt  main.c
userver/: CMakeLists.txt  README.md  SSL_README.md  test_curl.sh  test_simple.sh
userver/src/: http.c  http.h  http_form.c  http_form.h  http_json.c  http_json.h  http_server.c  http_server.h  main.c
